--- a/.travis.yml
+++ b/.travis.yml
@@ -33,14 +33,5 @@ deploy:
   local_dir: dist
   github_token: $GH_TOKEN
   keep_history: false
-  fqdn: config.qmk.fm
   on:
-    branch: master
-
-notifications:
-  webhooks:
-    urls:
-      - https://webhooks.gitter.im/e/428080202c6aa8650101
-    on_success: always # options: [always|never|change] default: always
-    on_failure: always # options: [always|never|change] default: always
-    on_start: never # options: [always|never|change] default: always
+    branch: dev/bmp
